APIs/googleapis.com/content/v2/java-client/docs/PosInventoryResponse.md


# PosInventoryResponse


## Properties

| Name | Type | Description | Notes |
|------------ | ------------- | ------------- | -------------|
|**contentLanguage** | **String** | Required. The two-letter ISO 639-1 language code for the item. |  [optional] |
|**gtin** | **String** | Global Trade Item Number. |  [optional] |
|**itemId** | **String** | Required. A unique identifier for the item. |  [optional] |
|**kind** | **String** | Identifies what kind of resource this is. Value: the fixed string \&quot;content#posInventoryResponse\&quot;. |  [optional] |
|**price** | [**Price**](Price.md) |  |  [optional] |
|**quantity** | **String** | Required. The available quantity of the item. |  [optional] |
|**storeCode** | **String** | Required. The identifier of the merchant&#39;s store. Either a &#x60;storeCode&#x60; inserted via the API or the code of the store in Google My Business. |  [optional] |
|**targetCountry** | **String** | Required. The CLDR territory code for the item. |  [optional] |
|**timestamp** | **String** | Required. The inventory timestamp, in ISO 8601 format. |  [optional] |



